// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`mutations.updateProposalVotesMutation wants to delete everything as user 1`] = `
Object {
  "updateProposalVotes": Object {
    "step": Object {
      "id": "U2VsZWN0aW9uU3RlcDpzZWxlY3Rpb25zdGVwOA==",
      "viewerVotes": Object {
        "totalCount": 0,
      },
    },
  },
}
`;

exports[`mutations.updateProposalVotesMutation wants to delete everything as user anonymous votes included 1`] = `
Object {
  "updateProposalVotes": Object {
    "step": Object {
      "id": "U2VsZWN0aW9uU3RlcDpzZWxlY3Rpb25zdGVwOA==",
      "viewerVotes": Object {
        "edges": Array [
          Object {
            "node": Object {
              "anonymous": true,
              "id": "1053",
            },
          },
        ],
        "totalCount": 1,
      },
    },
  },
}
`;

exports[`mutations.updateProposalVotesMutation wants to reorder his votes as user 1`] = `
Object {
  "updateProposalVotes": Object {
    "step": Object {
      "id": "Q29sbGVjdFN0ZXA6Y29sbGVjdHN0ZXBWb3RlQ2xhc3NlbWVudA==",
      "viewerVotes": Object {
        "edges": Array [
          Object {
            "node": Object {
              "proposal": Object {
                "id": "UHJvcG9zYWw6cHJvcG9zYWwyNQ==",
                "votes": Object {
                  "totalPointsCount": 7,
                },
              },
            },
          },
          Object {
            "node": Object {
              "proposal": Object {
                "id": "UHJvcG9zYWw6cHJvcG9zYWwyNg==",
                "votes": Object {
                  "totalPointsCount": 8,
                },
              },
            },
          },
          Object {
            "node": Object {
              "proposal": Object {
                "id": "UHJvcG9zYWw6cHJvcG9zYWwyNA==",
                "votes": Object {
                  "totalPointsCount": 1,
                },
              },
            },
          },
        ],
        "totalCount": 3,
      },
    },
  },
}
`;

exports[`mutations.updateProposalVotesMutation wants to reorder votes on question as user 1`] = `
Object {
  "updateProposalVotes": Object {
    "step": Object {
      "id": "Q29sbGVjdFN0ZXA6Y29sbGVjdFF1ZXN0aW9uVm90ZUF2ZWNDbGFzc2VtZW50",
      "viewerVotes": Object {
        "edges": Array [
          Object {
            "node": Object {
              "id": "2054",
            },
          },
          Object {
            "node": Object {
              "id": "2055",
            },
          },
        ],
        "totalCount": 2,
      },
    },
  },
}
`;
